// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /internships Internships_200 1`] = `
Object {
  "data": Array [
    Object {
      "additional": null,
      "address": "TEST",
      "category": Object {
        "createdAt": Any<String>,
        "id": 1,
        "label": "test",
        "updatedAt": Any<String>,
      },
      "city": "Brest",
      "country": "France",
      "createdAt": Any<String>,
      "description": "Stage",
      "endAt": 20191012,
      "id": 1,
      "isInternshipAbroad": true,
      "isProposition": false,
      "isPublish": true,
      "isValidated": false,
      "postalCode": "29280",
      "publishAt": 20191012,
      "startAt": 20191012,
      "state": "available",
      "subject": "test",
      "updatedAt": Any<String>,
    },
  ],
  "length": 1,
  "max": 1,
  "page": 1,
}
`;

exports[`GET /internships/:id Internships_200 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "availableCampaign": null,
  "business": null,
  "category": null,
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "files": Array [],
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "isProposition": false,
  "isPublish": true,
  "isValidated": false,
  "mentor": null,
  "postalCode": "29280",
  "propositions": Array [],
  "publishAt": 20191012,
  "startAt": 20191012,
  "state": "available",
  "student": null,
  "subject": "test",
  "updatedAt": Any<String>,
  "validatedCampaign": null,
}
`;

exports[`GET /internships/:id/availableCampaigns Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 1,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/businesses Internships_200_WithLinkedData 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "id": 1,
  "name": "test",
  "postalCode": "29200",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/internshipTypes Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 4,
  "label": "test",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/mentors Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": 2,
  "lastName": "Doe",
  "role": "default",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/propositions Internships_200_WithLinkedData 1`] = `
Object {
  "comment": "test",
  "createdAt": Any<String>,
  "id": 1,
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/students Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": 1,
  "lastName": "Doe",
  "semester": "S10",
  "updatedAt": Any<String>,
}
`;

exports[`GET /internships/:id/validatedCampaigns Internships_200_WithLinkedData 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 3,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships ValidInternships_200 1`] = `
Object {
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "isProposition": true,
  "isPublish": false,
  "isValidated": false,
  "postalCode": "29280",
  "publishAt": null,
  "startAt": 20191012,
  "state": "suggest",
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/availableCampaigns/:campaign_id/link Internships_200_WithCampaign 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 2,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/businesses/:business_id/link Internships_200_WithBusiness 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "id": 2,
  "name": "test",
  "postalCode": "29200",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/internshipTypes/:internship_type_id/link Internships_200_WithInternshipType 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 5,
  "label": "test",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/mentors/:mentor_id/link Internships_200_WithMentor 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": 3,
  "lastName": "Doe",
  "role": "default",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/propositions/:mentoring_proposition_id/link Internships_200_WithPropositions 1`] = `
Object {
  "comment": "test",
  "createdAt": Any<String>,
  "id": 2,
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/students/:student_id/link Internships_200_WithStudent 1`] = `
Object {
  "createdAt": Any<String>,
  "email": "john.doe@enib.fr",
  "firstName": "John",
  "id": 2,
  "lastName": "Doe",
  "semester": "S10",
  "updatedAt": Any<String>,
}
`;

exports[`POST /internships/:id/validatedCampaigns/:campaign_id/link Internships_200_WithCampaign 1`] = `
Object {
  "createdAt": Any<String>,
  "description": "A description to test",
  "endAt": 20191012,
  "id": 4,
  "isPublish": true,
  "maxProposition": 2,
  "name": "test",
  "semester": "S5",
  "startAt": 0,
  "updatedAt": Any<String>,
}
`;

exports[`PUT /internships/:id Internships_200_NotAnyDataUpdated 1`] = `
Object {
  "additional": null,
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "isProposition": false,
  "isPublish": true,
  "isValidated": false,
  "postalCode": "29280",
  "publishAt": 20191012,
  "startAt": 20191012,
  "state": "available",
  "subject": "test",
  "updatedAt": Any<String>,
}
`;

exports[`PUT /internships/:id Internships_200_UpdateAllData 1`] = `
Object {
  "additional": "additional data",
  "address": "TEST",
  "city": "Brest",
  "country": "France",
  "createdAt": Any<String>,
  "description": "Stage",
  "endAt": 20191012,
  "id": Any<Number>,
  "isInternshipAbroad": true,
  "isProposition": false,
  "isPublish": true,
  "isValidated": false,
  "postalCode": "29280",
  "publishAt": 20191012,
  "startAt": 20191012,
  "state": "available",
  "subject": "test",
  "updatedAt": Any<String>,
}
`;
